--- a/src/ood-preview/lib/ood_preview_web/templates/dune
+++ b/src/ood-preview/lib/ood_preview_web/templates/dune
@@ -65,6 +65,12 @@
   (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))
 
 (rule
+ (targets workshop_template.ml)
+ (deps workshop_template.eml)
+ (action
+  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))
+
+(rule
  (targets videos_template.ml)
  (deps videos_template.eml)
  (action
